<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#FF8F87">

                <SearchView
                    android:id="@+id/searchView"
                    android:layout_width="37dp"
                    android:layout_height="36dp"
                    android:layout_marginTop="4dp"
                    android:background="#FF8F87"
                    app:layout_constraintEnd_toStartOf="@+id/textView10"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                </SearchView>

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="371dp"
                    android:layout_height="31dp"
                    android:layout_weight="1"
                    android:padding="6dp"
                    android:text="@string/textView00"
                    android:textColor="#4E342E"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView31"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:text="@string/textView11"
                    android:textColor="#4E342E"
                    android:textSize="11sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.091"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView32"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/textview12"
                    android:textColor="#4E342E"
                    android:textSize="15sp"
                    app:layout_constraintEnd_toStartOf="@+id/button31"
                    app:layout_constraintHorizontal_bias="0.484"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView31" />

                <Button
                    android:id="@+id/button31"
                    android:layout_width="93dp"
                    android:layout_height="48dp"
                    android:layout_marginEnd="20dp"
                    android:background="#FFFFFF"
                    android:padding="0dp"
                    android:text="@string/upvote1"
                    android:textColor="#757575"
                    android:textSize="12sp"
                    app:backgroundTint="#ACACAC"
                    app:layout_constraintBaseline_toBaselineOf="@+id/button32"
                    app:layout_constraintEnd_toStartOf="@+id/textView33" />

                <TextView
                    android:id="@+id/textView33"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="28dp"
                    android:layout_marginEnd="24dp"
                    android:text="@string/textView13"
                    android:textColor="#000000"
                    app:layout_constraintEnd_toStartOf="@+id/button32"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/button32"
                    android:layout_width="102dp"
                    android:layout_height="48dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="24dp"
                    android:background="#FFFFFF"
                    android:padding="0dp"
                    android:text="@string/downvote1"
                    android:textColor="#757575"
                    android:textSize="12sp"
                    app:backgroundTint="#ACACAC"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="400dp"
                    android:layout_height="200dp"
                    android:layout_marginTop="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/button31"
                    app:srcCompat="@drawable/img1" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="429dp"
                    android:layout_height="250dp"
                    android:layout_marginTop="10dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/button31"
                    app:srcCompat="@drawable/img2"
                    tools:ignore="ImageContrastCheck" />

                <TextView
                    android:id="@+id/textView31"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:text="@string/textView11"
                    android:textColor="#4E342E"
                    android:textSize="11sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.091"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView32"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/textview12"
                    android:textColor="#4E342E"
                    android:textSize="15sp"
                    app:layout_constraintEnd_toStartOf="@+id/button31"
                    app:layout_constraintHorizontal_bias="0.484"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView31" />

                <Button
                    android:id="@+id/button31"
                    android:layout_width="93dp"
                    android:layout_height="48dp"
                    android:layout_marginEnd="20dp"
                    android:background="#FFFFFF"
                    android:padding="0dp"
                    android:text="@string/upvote1"
                    android:textColor="#757575"
                    android:textSize="12sp"
                    app:backgroundTint="#ACACAC"
                    app:layout_constraintBaseline_toBaselineOf="@+id/button32"
                    app:layout_constraintEnd_toStartOf="@+id/textView33" />

                <TextView
                    android:id="@+id/textView33"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="28dp"
                    android:layout_marginEnd="24dp"
                    android:text="@string/textView13"
                    android:textColor="#000000"
                    app:layout_constraintEnd_toStartOf="@+id/button32"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/button32"
                    android:layout_width="102dp"
                    android:layout_height="48dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="24dp"
                    android:background="#FFFFFF"
                    android:padding="0dp"
                    android:text="@string/downvote1"
                    android:textColor="#757575"
                    android:textSize="12sp"
                    app:backgroundTint="#ACACAC"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="match_parent"
                    android:layout_height="608dp"
                    android:layout_marginTop="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView32"
                    app:srcCompat="@drawable/img3" />

                <TextView
                    android:id="@+id/textView31"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:text="@string/textView11"
                    android:textColor="#4E342E"
                    android:textSize="11sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.091"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView32"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/textview12"
                    android:textColor="#4E342E"
                    android:textSize="15sp"
                    app:layout_constraintEnd_toStartOf="@+id/button31"
                    app:layout_constraintHorizontal_bias="0.484"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView31" />

                <Button
                    android:id="@+id/button31"
                    android:layout_width="93dp"
                    android:layout_height="48dp"
                    android:layout_marginEnd="20dp"
                    android:background="#FFFFFF"
                    android:padding="0dp"
                    android:text="@string/upvote1"
                    android:textColor="#757575"
                    android:textSize="12sp"
                    app:backgroundTint="#ACACAC"
                    app:layout_constraintBaseline_toBaselineOf="@+id/button32"
                    app:layout_constraintEnd_toStartOf="@+id/textView33" />

                <TextView
                    android:id="@+id/textView33"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="28dp"
                    android:layout_marginEnd="24dp"
                    android:text="@string/textView13"
                    android:textColor="#000000"
                    app:layout_constraintEnd_toStartOf="@+id/button32"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/button32"
                    android:layout_width="102dp"
                    android:layout_height="48dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="24dp"
                    android:background="#FFFFFF"
                    android:padding="0dp"
                    android:text="@string/downvote1"
                    android:textColor="#757575"
                    android:textSize="12sp"
                    app:backgroundTint="#ACACAC"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>